--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">DelightNotes</string>
     <string name="add_note">Add Note</string>
-    <string name="delete_note">Delete Note</string>
+    <string name="delete_notes">Delete Notes</string>
 </resources>
